Updated report test code